# YouTube-Download-WebUI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  test.json  test.py
.github/workflows/: docker-publish.yml
app/: app.py
docs/: README_en.md  README_simp_chinese.md
front/: index.html  package-lock.json
front/old/templates/: index.html
front/src/: App.css  App.tsx  index.css
front/src/hooks/: userMediaTypeListener.ts
front/src/utils/: download_btn.ts
front/static/: script.js  style.css
front/templates/: index.html
src/: __init__.py  _setup_log.py  cache.py  module.py  scrapetube.py  types.py  utils.py
src/downloader/: downloader.py  ffmpeg_merge.py  pytubefix_downloader.py  yt_dlp_downloader.py
tests/: test_download_api.py  test_pytube_download.py
